Fix formatting, spacing, flex wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ body {
   }
 }
 
-#welcome-section--container{
+#welcome-section--container {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 38em;
@@ -161,7 +161,7 @@ a {
 }
 
 @media only screen and (max-width: 600px) {
-	#projects {
+	#projects, #welcome-section {
 		padding-top: 36px;
 	}
 }
@@ -179,7 +179,7 @@ a {
 
 .project-tile div {
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: row wrap;
 
 }
 
@@ -211,4 +211,5 @@ a {
 	cursor: pointer;
 	display: inline-block;
 	flex: 1;
+	text-align: center;
 }
